--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "angular-p",
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "ng build --aot -prod",
+    "postinstall": "ng build --aot --prod",
+    "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -47,5 +48,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
+  },
+  "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1"
   }
 }
